feat: alter API for topicDetails
