# backend/docs/swagger.json
@@ -33,10 +33,7 @@
                     "200": {
                         "description": "List of topic names",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/model.TopicDetails"
                         }
                     },
                     "500": {
@@ -55,6 +52,64 @@
             "properties": {
                 "message": {
                     "type": "string"
+                }
+            }
+        },
+        "model.CleanupPolicy": {
+            "type": "string",
+            "enum": [
+                "delete",
+                "compact",
+                "both",
+                "unknown"
+            ],
+            "x-enum-varnames": [
+                "CleanupPolicyDelete",
+                "CleanupPolicyCompact",
+                "CleanupPolicyBoth",
+                "CleanupPolicyUnknown"
+            ]
+        },
+        "model.RetentionMs": {
+            "type": "object",
+            "properties": {
+                "indefinite": {
+                    "type": "boolean"
+                },
+                "value": {
+                    "type": "integer"
+                }
+            }
+        },
+        "model.TopicDetails": {
+            "type": "object",
+            "properties": {
+                "additionalConfigs": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "string"
+                    }
+                },
+                "cleanupPolicy": {
+                    "$ref": "#/definitions/model.CleanupPolicy"
+                },
+                "isInternal": {
+                    "type": "boolean"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "numPartitions": {
+                    "type": "integer"
+                },
+                "replicationFactor": {
+                    "type": "integer"
+                },
+                "retentionBytes": {
+                    "type": "integer"
+                },
+                "retentionMs": {
+                    "$ref": "#/definitions/model.RetentionMs"
                 }
             }
         }
